<resources>
  <string name="app_name">Holocron</string>
  <string name="action_settings">Settings</string>
  <string name="new_character">New Character</string>
  <string name="new_character_title" type="id">New Character</string>
  <string name="character_name">Character Name</string>
  <string name="species">Species</string>
  <string name="age">Age</string>
  <string name="height">Height</string>
  <string name="weight">Weight</string>
  <string name="skin_tone">Skin Tone</string>
  <string name="hair">Hair</string>
  <string name="eye_color">Eye Color</string>
  <string name="select_a_career_first">Select a Career First</string>
  <string name="select_a_career">Select a Career</string>
  <string name="next">Next</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="cancel">Cancel</string>
  <string name="skill_selection_count">skill_selection_count</string>
  <string name="skill_selection_choices">skill_selection_choices</string>
  <string name="working_on_career_skills">working_on_career_skills</string>
  <string name="select_a_character">Select a Character</string>
  <string name="title_activity_display_character">DisplayCharacterActivity</string>
  <string name="section_format">Hello World from section: %1$d</string>
  <string name="title_activity_character">CharacterActivity</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="drawer_open">Open</string>
  <string name="drawer_close">Close</string>
  <string name="wound_threshold">Wound Threshold</string>
  <string name="strain_threshold">Strain Threshold</string>
  <string name="soak">Soak</string>
  <string name="melee_defense">Melee Defense</string>
  <string name="ranged_defense">Ranged Defense</string>
  <string name="xp">Experience Points</string>
  <string name="title_activity_credit_editor">CreditEditor</string>
  <string name="update_text">Update</string>
  <string name="title_activity_condition_editor">ConditionEditor</string>
  <string name="title_activity_more_specializations">MoreSpecializations</string>
  <string name="title_activity_skill_action_editor">SkillActionEditor</string>
  <string name="use_google_drive_label">use_google_drive</string>
</resources>
