<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".ui.display.pages.basics.BasicsPage">
  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      tools:context=".activities.NewCharacterActivity">

      <EditText
        android:id="@+id/character_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/character_name"
        android:maxLines="1"
        android:inputType="text"
        android:selectAllOnFocus="true"/>

      <EditText
        android:id="@+id/character_species"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/species"
        android:inputType="text"
        android:maxLines="1"/>

      <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:inputType="text"
        android:maxLines="1"/>

      <EditText
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/height"
        android:inputType="text"
        android:maxLines="1"/>

      <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:inputType="text"
        android:maxLines="1"/>

      <EditText
        android:id="@+id/skin_tone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/skin_tone"
        android:inputType="text"
        android:maxLines="1"/>

      <EditText
        android:id="@+id/hair_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hair"
        android:inputType="text"
        android:maxLines="1"/>

      <EditText
        android:id="@+id/eye_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eye_color"
        android:inputType="text"
        android:maxLines="1"/>

      <Spinner
        android:id="@+id/careers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

      <Spinner
        android:id="@+id/specializations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </LinearLayout>
  </ScrollView>
</LinearLayout>
